external projects reworked.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,42 +60,46 @@ if ( CMAKE_HOST_WIN32 )
 	set_source_files_properties( ${CHILD_SRCS} COMPILE_FLAGS "/FIglibc/bits/signum.h /FIyaal/fix.hxx" )
 	target_link_libraries( ${PROJECT_NAME} ${yaal_LIBRARIES} libintl )
 	target_link_libraries( child ${yaal_LIBRARIES} libintl )
+
 	file( GLOB makedef_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/makedef.vc*proj )
 	include_external_msproject( makedef ${makedef_PROJ} )
-	file( GLOB mkheaders_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/mkheaders.vc*proj )
-	include_external_msproject( mkheaders ${mkheaders_PROJ} )
+
 	file( GLOB msvcxx_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/msvcxx.vc*proj )
 	include_external_msproject( msvcxx ${msvcxx_PROJ} )
 
 	file( GLOB hcore_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hcore.vc*proj )
-	include_external_msproject( hcore ${hcore_PROJ} msvcxx makedef )
+	include_external_msproject( hcore ${hcore_PROJ} )
 	file( GLOB hcore_static_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hcore-static.vc*proj )
 	include_external_msproject( hcore-static ${hcore_static_PROJ} msvcxx makedef )
 
 	file( GLOB tools_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/tools.vc*proj )
-	include_external_msproject( tools ${tools_PROJ} hcore )
+	include_external_msproject( tools ${tools_PROJ} )
 	file( GLOB tools_static_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/tools-static.vc*proj )
-	include_external_msproject( tools-static ${tools_static_PROJ} hcore )
+	include_external_msproject( tools-static ${tools_static_PROJ} )
 
 	file( GLOB dbwrapper_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/dbwrapper.vc*proj )
-	include_external_msproject( dbwrapper ${dbwrapper_PROJ} tools )
+	include_external_msproject( dbwrapper ${dbwrapper_PROJ} )
 	file( GLOB dbwrapper_static_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/dbwrapper-static.vc*proj )
-	include_external_msproject( dbwrapper-static ${dbwrapper_static_PROJ} tools )
+	include_external_msproject( dbwrapper-static ${dbwrapper_static_PROJ} )
 
 	file( GLOB hconsole_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hconsole.vc*proj )
-	include_external_msproject( hconsole ${hconsole_PROJ} tools )
+	include_external_msproject( hconsole ${hconsole_PROJ} )
 	file( GLOB hconsole_static_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hconsole-static.vc*proj )
-	include_external_msproject( hconsole-static ${hconsole_static_PROJ} tools )
+	include_external_msproject( hconsole-static ${hconsole_static_PROJ} )
 
 	file( GLOB hdata_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hdata.vc*proj )
-	include_external_msproject( hdata ${hdata_PROJ} dbwrapper hconsole )
+	include_external_msproject( hdata ${hdata_PROJ} )
 	file( GLOB hdata_static_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hdata-static.vc*proj )
-	include_external_msproject( hdata-static ${hdata_static_PROJ} dbwrapper hconsole )
+	include_external_msproject( hdata-static ${hdata_static_PROJ} )
 
-	file( GLOB INSTALL_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/INSTALL.vc*proj )
-	include_external_msproject( INSTALL ${INSTALL_PROJ} hdata mkheaders )
-	add_dependencies( tress INSTALL )
-	add_dependencies( tressplugin INSTALL )
+	file( GLOB sqlite3_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/sqlite3.vc*proj )
+	include_external_msproject( sqlite3 ${sqlite3_PROJ} )
+
+	file( GLOB headers_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/headers.vc*proj )
+	include_external_msproject( headers ${headers_PROJ} )
+	
+	file( GLOB mkheaders_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/mkheaders.vc*proj )
+	include_external_msproject( mkheaders ${mkheaders_PROJ} )
 else()
 	set_target_properties( tressplugin PROPERTIES OUTPUT_NAME 1exec PREFIX "" SUFFIX "" LIBRARY_OUTPUT_DIRECTORY ${TARGET_PATH}/tressplugin LIBRARY_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/tressplugin LIBRARY_OUTPUT_DIRECTORY_RELEASE ${TARGET_PATH}/tressplugin LIBRARY_OUTPUT_DIRECTORY_COV ${TARGET_PATH}/tressplugin LIBRARY_OUTPUT_DIRECTORY_PROF ${TARGET_PATH}/tressplugin )
 	target_link_libraries( ${PROJECT_NAME} ${yaal_LIBRARIES} ${Boost_LIBRARIES} )
