--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -4,7 +4,7 @@
 #
 #	Makefile - this file is integral part of `tress' project.
 #
-#	i.  You may not $(MAKE) any changes in Copyright information.
+#	i.  You may not make any changes in Copyright information.
 #	ii. You must attach Copyright information to any part of every copy
 #	    of this software.
 #
@@ -29,6 +29,18 @@ PRJNAME      = tress
 VERSION      = 0
 SUBVERSION   = 0
 EXTRAVERSION = 0
+prefix       = @prefix@
+exec_prefix  = @exec_prefix@
+DIR_SYSCONF  = $(DESTDIR)@sysconfdir@
+DIR_BIN      = $(DESTDIR)@bindir@
+DIR_HEADERS  = $(DESTDIR)@includedir@
+DIR_SHARE    = $(DESTDIR)@datarootdir@
+LIB_PREFIX   = @LIB_PREFIX@
+MKDIR_P      = @MKDIR_P@
+INSTALL      = @INSTALL@
+RANLIB       = @RANLIB@
+GITID        = @GITID@
+CTAGS        = @CTAGS@
 include $(DIR_ROOT)/_aux/mk/1_basic.mk
 LIBS         = hcore$(LIB_INFIX) tools$(LIB_INFIX) dbwrapper$(LIB_INFIX) hconsole$(LIB_INFIX) \
                hdata$(LIB_INFIX) \
@@ -44,8 +56,6 @@ DO_@DO_TARGET@=1
 ifdef NODEBUG
 	TARGET     = $(PRJNAME)
 endif
-CTAGS        = @CTAGS@
-GITID        = @GITID@
 override CXX_STANDARD=@CXX_STANDARD@
 include $(DIR_ROOT)/_aux/mk/2_term.mk
 include $(DIR_ROOT)/_aux/mk/3_suffix.mk
