--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -41,6 +41,7 @@ INSTALL      = @INSTALL@
 RANLIB       = @RANLIB@
 GITID        = @GITID@
 CTAGS        = @CTAGS@
+GTAGS        = @GTAGS@
 include $(DIR_ROOT)/_aux/mk/1_basic.mk
 LIBS         = hcore$(LIB_INFIX) tools$(LIB_INFIX) dbwrapper$(LIB_INFIX) hconsole$(LIB_INFIX) \
                hdata$(LIB_INFIX) \
