Fixed bug in build.

--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -38,7 +38,7 @@ DIR_LOCALSTATE = $(DESTDIR)@localstatedir@
 DIR_HEADERS    = $(DESTDIR)@includedir@
 DIR_SHARE      = $(DESTDIR)@datarootdir@
 LIB_PREFIX     = @LIB_PREFIX@
-CXX           ?= @CXX@
+CXX            = @CXX@
 MKDIR_P        = @MKDIR_P@
 INSTALL        = @INSTALL@
 RANLIB         = @RANLIB@
