--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -92,5 +92,5 @@ $(KEYS):
 
 test: $(KEYS)
 	@cd $(DIR_ROOT) && mkdir -p out && sqlite3 out/tress.sqlite < data/sqlite.sql && \
-	. _aux/set-limits.sh && $(TRESS_ENV) ./build/debug/tress/1exec $(TRESS_ARG) > /dev/null
+	. _aux/set-limits.sh && $(TRESS_ENV) ./build/$(TARGET)/tress/1exec $(TRESS_ARG) > /dev/null
 
