--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -18,7 +18,7 @@
 #  4. If you want redistribute binary package you cannot demand any fees
 #     for this software.
 #     You cannot even demand cost of the carrier (CD for example).
-#  5. You cannot include it to any commercial enterprise (for example 
+#  5. You cannot include it to any commercial enterprise (for example
 #     as a free add-on to payed software or payed newspaper).
 # This program is distributed in the hope that it will be useful, but WITHOUT
 # ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -49,7 +49,7 @@ include $(DIR_ROOT)/_aux/mk/1_basic.mk
 LIBS           = hcore$(LIB_INFIX) tools$(LIB_INFIX) dbwrapper$(LIB_INFIX) \
 								 hconsole$(LIB_INFIX) hdata$(LIB_INFIX) hconsole$(LIB_INFIX) \
 								 dbwrapper$(LIB_INFIX) tools$(LIB_INFIX) hcore$(LIB_INFIX) \
-                 @BOOST_FILESYSTEM_LIB@ @BOOST_SYSTEM_LIB@ @BOOST_DATE_TIME_LIB@ dl
+                 @BOOST_FILESYSTEM_LIB@ @BOOST_SYSTEM_LIB@ @BOOST_DATE_TIME_LIB@
 $(eval $(call NEW_TARGET,tress,src,-D__TRESS__ -Wno-variadic-macros,@RDYNAMIC@))
 $(eval $(call NEW_TARGET,child,child,-D__CHILD__))
 NAME = tressplugin
