build: Add support for valgrind memcheck run from make.

--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -85,7 +85,10 @@ include $(DIR_ROOT)/_aux/mk/e_deps.mk
 
 .PHONY: test
 
-test:
+test: debug
 	@cd $(DIR_ROOT) && mkdir -p out && sqlite3 out/tress.sqlite < data/sqlite.sql && \
 	. _aux/set-limits.sh && $(TRESS_ENV) ./build/$(TARGET)/tress/1exec $(TRESS_ARG) > /dev/null
 
+memcheck: debug
+	@cd $(DIR_ROOT) && mkdir -p out && sqlite3 out/tress.sqlite < data/sqlite.sql && \
+	. _aux/set-limits.sh && $(TRESS_ENV) valgrind ./build/$(TARGET)/tress/1exec $(TRESS_ARG) > /dev/null
