valgrind: Get memcheck errors (or lack of there of) as proper result from make.

--- a/.valgrindrc
+++ b/.valgrindrc
@@ -4,5 +4,6 @@
 --show-reachable=yes
 --trace-children=no
 --track-fds=yes
+--error-exitcode=255
 --suppressions=valgrind.supp
 --log-file=valgrind.log
