build: Do not allow for complete overriding of EXTRA_XX_FLAGS.

--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -70,8 +70,8 @@ EXTRA_COMPILER_DEBUG_FLAGS=@EXTRA_COMPILER_DEBUG_FLAGS@
 EXTRA_COMPILER_OPTIMIZATION_FLAGS=@EXTRA_COMPILER_OPTIMIZATION_FLAGS@
 EXTRA_INCLUDE_PATHS=@EXTRA_INCLUDE_PATHS@
 EXTRA_LIBRARY_PATHS=@EXTRA_LIBRARY_PATHS@
-EXTRA_CXXFLAGS=@EXTRA_CXXFLAGS@
-EXTRA_LXXFLAGS=@EXTRA_LXXFLAGS@
+override EXTRA_CXXFLAGS+=@EXTRA_CXXFLAGS@
+override EXTRA_LXXFLAGS+=@EXTRA_LXXFLAGS@
 override CXXFLAGS += @DEFS@ -Wno-missing-noreturn
 override LXXFLAGS += @BOOST_LDFLAGS@
 START_GROUP  = @START_GROUP@
