--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -63,6 +63,7 @@ ifdef NODEBUG
 endif
 include $(DIR_ROOT)/_aux/mk/20_term.mk
 include $(DIR_ROOT)/_aux/mk/30_suffix.mk
+include $(DIR_ROOT)/_aux/mk/40_commit-id.mk
 include $(DIR_ROOT)/_aux/mk/50_wrapper.mk
 include $(DIR_ROOT)/_aux/mk/60_flags.mk
 -include $(DIR_ROOT)/local.mk
