Add missing changes for previous commit.

--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,7 @@ int main( int, char** ) {
 ]])], [AC_DEFINE([HAVE_SGI_STL_EXTENSIONS],[],[Do you have SGI STL extensions?])] RESULT=["yes"])
 AC_MSG_RESULT([$RESULT])
 AC_CHECK_DECLS([RTLD_NEXT],[],[],[#include <dlfcn.h>])
+AC_CHECK_SIZEOF([chtype],[],[#include <ncurses.h>])
 AC_SEARCH_LIBS([dlopen],[dl],,[AC_MSG_ERROR([Cannot continue without dynamic dynamic linker library.])])
 AC_CHECK_PROG(HAS_TNSPING,[tnsping],["yes"],["no"])
 AC_MSG_CHECKING([Oracle DB instance availability])
