--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,30 +99,40 @@ if ( CMAKE_HOST_WIN32 )
 	file( GLOB msvcxx_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/msvcxx.vc*proj )
 	include_external_msproject( msvcxx ${msvcxx_PROJ} )
 
-	file( GLOB hcore_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hcore.vc*proj )
-	include_external_msproject( hcore ${hcore_PROJ} )
 	file( GLOB hcore_static_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hcore-static.vc*proj )
-	include_external_msproject( hcore-static ${hcore_static_PROJ} msvcxx makedef )
+	include_external_msproject( hcore-static ${hcore_static_PROJ} msvcxx )
+	file( GLOB hcore_def_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hcore-def.vc*proj )
+	include_external_msproject( hcore-def ${hcore_def_PROJ} makedef )
+	file( GLOB hcore_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hcore.vc*proj )
+	include_external_msproject( hcore ${hcore_PROJ} hcore-def  )
 
-	file( GLOB tools_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/tools.vc*proj )
-	include_external_msproject( tools ${tools_PROJ} )
 	file( GLOB tools_static_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/tools-static.vc*proj )
 	include_external_msproject( tools-static ${tools_static_PROJ} )
+	file( GLOB tools_def_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/tools-def.vc*proj )
+	include_external_msproject( tools-def ${tools_def_PROJ} hcore )
+	file( GLOB tools_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/tools.vc*proj )
+	include_external_msproject( tools ${tools_PROJ} )
 
-	file( GLOB dbwrapper_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/dbwrapper.vc*proj )
-	include_external_msproject( dbwrapper ${dbwrapper_PROJ} )
 	file( GLOB dbwrapper_static_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/dbwrapper-static.vc*proj )
 	include_external_msproject( dbwrapper-static ${dbwrapper_static_PROJ} )
+	file( GLOB dbwrapper_def_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/dbwrapper-def.vc*proj )
+	include_external_msproject( dbwrapper-def ${dbwrapper_def_PROJ} tools )
+	file( GLOB dbwrapper_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/dbwrapper.vc*proj )
+	include_external_msproject( dbwrapper ${dbwrapper_PROJ} )
 
-	file( GLOB hconsole_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hconsole.vc*proj )
-	include_external_msproject( hconsole ${hconsole_PROJ} )
 	file( GLOB hconsole_static_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hconsole-static.vc*proj )
 	include_external_msproject( hconsole-static ${hconsole_static_PROJ} )
+	file( GLOB hconsole_def_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hconsole-def.vc*proj )
+	include_external_msproject( hconsole-def ${hconsole_def_PROJ} dbwrapper tools )
+	file( GLOB hconsole_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hconsole.vc*proj )
+	include_external_msproject( hconsole ${hconsole_PROJ} )
 
-	file( GLOB hdata_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hdata.vc*proj )
-	include_external_msproject( hdata ${hdata_PROJ} )
 	file( GLOB hdata_static_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hdata-static.vc*proj )
 	include_external_msproject( hdata-static ${hdata_static_PROJ} )
+	file( GLOB hdata_def_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hdata-def.vc*proj )
+	include_external_msproject( hdata-def ${hdata_def_PROJ} hconsole )
+	file( GLOB hdata_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/hdata.vc*proj )
+	include_external_msproject( hdata ${hdata_PROJ} )
 
 	file( GLOB sqlite3_PROJ RELATIVE ${CMAKE_HOME_DIRECTORY} ../yaal/sqlite3.vc*proj )
 	include_external_msproject( sqlite3 ${sqlite3_PROJ} )
