--- a/Makefile.mk.in
+++ b/Makefile.mk.in
@@ -64,13 +64,5 @@ include $(DIR_ROOT)/_aux/mk/b0_filenames.mk
 include $(DIR_ROOT)/_aux/mk/e0_target-tools.mk
 include $(DIR_ROOT)/_aux/mk/f0_deps.mk
 
-.PHONY: test
+include $(DIR_ROOT)/tress.mk
 
-test: debug
-	@cd $(DIR_ROOT) && mkdir -p out && sqlite3 out/tress.sqlite < data/sqlite.sql && \
-	. _aux/set-limits.sh && $(TRESS_ENV) ./build/$(TARGET)/tress/1exec $(TRESS_ARG) > /dev/null
-
-memcheck: debug
-	@cd $(DIR_ROOT) && mkdir -p out && sqlite3 out/tress.sqlite < data/sqlite.sql && \
-	. _aux/set-limits.sh && $(TRESS_ENV) valgrind ./build/$(TARGET)/tress/1exec $(TRESS_ARG) > /dev/null; \
-	test $$? -ne 255
