--- a/configure.ac
+++ b/configure.ac
@@ -7,11 +7,12 @@ m4_include([_aux/client-configure.m4])
 YAAL_CONFIGURE_CLIENT_INIT(tress, MY_PACKAGE_VERSION)
 YAAL_DETECT_FLAGS(SONAME_FLAG, [-Wl,-soname,foo], [C++])
 YAAL_DETECT_FLAGS(EXTRA_LXXFLAGS, [-Wl,--export-all-symbols], [C++])
-YAAL_DETECT_FLAGS(EXTRA_LXXFLAGS, [-Wl,--exclude-all-symbols], [C++])
+YAAL_DETECT_FLAGS(EXCLUDE_ALL_SYMBOLS, [-Wl,--exclude-all-symbols], [C++])
 if test ["x${SONAME_FLAG}"] != ["x"] ; then
 	SONAME_FLAG="-Wl,-soname,\$(SONAME_\$(NAME))"
 fi
 AC_SUBST([SONAME_FLAG],[${SONAME_FLAG}])
+AC_SUBST([EXCLUDE_ALL_SYMBOLS],[${EXCLUDE_ALL_SYMBOLS}])
 CXXFLAGS_ORIG="${CXXFLAGS}"
 CXXFLAGS="${CXXFLAGS} -Wno-long-long"
 m4_include([_aux.local/m4_ax_boost_base.m4])
