Make tress CI friendly.

--- a/configure.ac
+++ b/configure.ac
@@ -55,6 +55,16 @@ if test ["$HAS_TNSPING"] = ["yes"] ; then
 		AC_MSG_RESULT([no])
 	fi
 fi
+if test ["x${CONTINUOUS_INTEGRATION_SYSTEM}"] != ["x"] ; then
+	define(
+		CONTINUOUS_INTEGRATION_SYSTEM,
+		esyscmd(echo -n ["CONTINUOUS_INTEGRATION_${CONTINUOUS_INTEGRATION_SYSTEM}"] | awk '{ printf( toupper( $0 ) ) }')) dnl No newline is significant.
+	AC_DEFINE_UNQUOTED(
+		[CONTINUOUS_INTEGRATION_SYSTEM],
+		[],
+		[We are at this continuous integration system.]
+	)
+fi
 AX_BOOST_BASE([1.35])
 AX_BOOST_SYSTEM
 AX_BOOST_FILESYSTEM
