--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,13 +45,23 @@ check_symbol_exists( RTLD_NEXT dlfcn.h HAVE_DECL_RTLD_NEXT )
 set( CMAKE_EXTRA_INCLUDE_FILES_ORIG "${CMAKE_EXTRA_INCLUDE_FILES}" )
 set( CMAKE_EXTRA_INCLUDE_FILES "ncurses.h" )
 check_type_size( "chtype" CHTYPE )
+check_type_size( "mmask_t" MMASK_T )
 set( CMAKE_EXTRA_INCLUDE_FILES "${CMAKE_EXTRA_INCLUDE_FILES_ORIG}" )
 if ( HAVE_CHTYPE )
 	set( SIZEOF_CHTYPE ${CHTYPE} )
 endif()
+if ( HAVE_MMASK_T )
+	set( SIZEOF_MMASK_T ${MMASK_T} )
+endif()
+
+if ( NOT ( "$ENV{CONTINUOUS_INTEGRATION_SYSTEM}" STREQUAL "" ) )
+	string( TOUPPER $ENV{CONTINUOUS_INTEGRATION_SYSTEM} CONTINUOUS_INTEGRATION_SYSTEM )
+endif()
 
 include_directories( . )
+set( HAVE_LOCAL_HXX 1 )
 configure_file( ../yaal/_aux/cmake/client-config.hxx ${TARGET_PATH}/config.hxx )
+configure_file( ./src/local.hxx ${TARGET_PATH}/local.hxx )
 
 file( GLOB SRCS ./src/*.cxx )
 file( GLOB HDRS ./src/*.hxx )
@@ -86,6 +96,8 @@ set_target_properties(
 set_target_properties( TUT PROPERTIES LINKER_LANGUAGE CXX )
 set_target_properties( tressplugin PROPERTIES LINKER_LANGUAGE CXX )
 set_target_properties( huginn_greeter PROPERTIES LINKER_LANGUAGE CXX )
+
+target_link_libraries( huginn_greeter ${Yaal_LIBRARIES} )
 if ( CMAKE_HOST_WIN32 )
 	add_executable( child-simple ${CMAKE_HOME_DIRECTORY}/data/child.cxx )
 	set_target_properties( child-simple PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME child RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_HOME_DIRECTORY}/data )
@@ -173,7 +185,6 @@ if ( CMAKE_HOST_WIN32 )
 	add_dependencies( tress install_yaal )
 	add_dependencies( tressplugin install_yaal )
 	add_dependencies( huginn_greeter install_yaal )
-	target_link_libraries( huginn_greeter ${Yaal_LIBRARIES} )
 else()
 	set_target_properties( ${PROJECT_NAME} PROPERTIES COMPILE_FLAGS -Wno-variadic-macros )
 	set_target_properties(
