xmath::HNumberSetStatistics: Test `histogram` statistic.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,12 @@ int main( int, char** )
 
 check_symbol_exists( RTLD_NEXT dlfcn.h HAVE_DECL_RTLD_NEXT )
 set( CMAKE_EXTRA_INCLUDE_FILES_ORIG "${CMAKE_EXTRA_INCLUDE_FILES}" )
-set( CMAKE_EXTRA_INCLUDE_FILES "ncurses.h" )
+if ( CMAKE_HOST_WIN32 )
+	set( CMAKE_EXTRA_INCLUDE_FILES "curses.h" )
+	set( CMAKE_REQUIRED_INCLUDES "${CMAKE_INCLUDE_PATH}" )
+else()
+	set( CMAKE_EXTRA_INCLUDE_FILES "ncurses.h" )
+endif()
 check_type_size( "chtype" CHTYPE )
 check_type_size( "mmask_t" MMASK_T )
 set( CMAKE_EXTRA_INCLUDE_FILES "${CMAKE_EXTRA_INCLUDE_FILES_ORIG}" )
