autoconf, cmake: Support `CONTINUOUS_INTEGRATION_SYSTEM` variable value with `-` (minus) character in it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ endif()
 
 if ( NOT ( "$ENV{CONTINUOUS_INTEGRATION_SYSTEM}" STREQUAL "" ) )
 	string( TOUPPER $ENV{CONTINUOUS_INTEGRATION_SYSTEM} CONTINUOUS_INTEGRATION_SYSTEM )
+	string( REPLACE "-" "_" CONTINUOUS_INTEGRATION_SYSTEM "${CONTINUOUS_INTEGRATION_SYSTEM}" )
 endif()
 
 include_directories( . )
