HHuginn.Stream: Test `close()` method.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,7 @@ if ( CMAKE_HOST_WIN32 )
 	set_property( DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" PROPERTY VS_STARTUP_PROJECT tress )
 	set_target_properties(
 		tress PROPERTIES
+		VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
 		VS_DEBUGGER_ENVIRONMENT "PATH=%PATH%;${CMAKE_INSTALL_PREFIX}/bin\nYAAL_AUTO_SANITY=1"
 		VS_DEBUGGER_COMMAND_ARGUMENTS "-E"
 	)
